# FlappyBird-E135

./: cambiarPropietarioPines.sh  install.sh  perroGuardian.service  send_email.sh
ID003_Lib_V3/: CMakeLists.txt  IDcomand.cpp  Idcomm.h  id003_lib_v3.cpp  id003_lib_v3.h
build-cmakeFlappy-Desktop-Default/: CMakeCache.txt  cmake_install.cmake  smart-vending-flappy-bird  smart-vending-flappy-bird.cbp
build-cmakeFlappy-Desktop-Default/smart-vending-flappy-bird_automoc.dir/: moc_product_MIANZCYSXPGCZS.cpp  moc_productsmanage_YREECMY7WH3BZB.cpp
cmakeFlappy/: CMakeLists.txt  awardPrize.cpp  awardPrize.h  config.conf  config.ini  configurationFile.cpp  configurationFile.h  eleoverboard.cpp  eleoverboard.h  elepipe.cpp  elereadyboard.cpp  gameelement.cpp  gameelement.h  main.cpp  mainwindow.cpp  mainwindow.h  product.cpp  product.h  productsmanager.cpp  productsmanager.h
cmakeFlappy/flappyBirdConfig/: config.ini  entregasPremios  productos.ini
newDigitalioLib/: CMakeLists.txt
newEngine_sv/: enginesv_dpx.cpp
